[package]
name = "rav1e_asm_x86"
version = "0.0.0"
authors = ["Thomas Daede <tdaede@xiph.org>"]
edition = "2021"
rust-version = "1.70.0"

[dependencies]
libc = "0.2"
paste = "1.0"
rav1e_tx = { path = "../rav1e_tx" }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
nasm-rs = { version = "0.3", features = ["parallel"] }
