[package]
name = "rav1e_cli"
version = "0.0.0"
edition = "2021"
default-run = "rav1e"

[[bin]]
name = "rav1e"
path = "src/rav1e.rs"

[[bin]]
name = "rav1e-ch"
path = "src/rav1e-ch.rs"
required-features = ["channel-api", "unstable"]

[features]
default = ["threading", "asm", "signal_support"]
threading = ["rav1e/threading"]
asm = ["rav1e/asm"]
signal_support = ["signal-hook"]
unstable = []
channel-api = ["dep:crossbeam"]
serialize = ["serde", "toml", "rav1e/serialize", "av1-grain/serialize"]

[dependencies]
rav1e = { path = "../rav1e" }
ivf = { path = "../ivf" }

av-metrics = { version = "0.9.1", default-features = false }
cfg-if = "1.0"
clap_complete = "4.4"
console = "0.15"
fern = "0.6"
log = "0.4"
nom = "7.1.3"
y4m = "0.8"
profiling = "1"
libc = "0.2"
thiserror = "1"
scan_fmt = "0.2"
once_cell = "1"
av1-grain = "0.2"

# Only needed for feature serialize
serde = { version = "1", optional = true, features = ["derive"] }
toml = { version = "0.8", optional = true }

# Only needed for rav1e-ch
crossbeam = { version = "0.8.4", optional = true }

[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.3", optional = true }

[dependencies.clap]
version = "4.4"
default-features = false
features = [
  "color",
  "std",
  "wrap_help",
  "derive"
]

[build-dependencies]
built = "0.7"
